2010-11-05  kitone  <kitone@gna.org>

	* src/subtitlemodel.cc:
	* src/subtitlemodel.h:
	* src/subtitles.cc:
	* src/subtitles.h:
	Fix bug #17000 : Subtitles in MicroDVD format don't display correct.
	SubtitleModel::find doesn't work if the document is frame based.
	Remove unused function find_in_or_after. 
	Clean code.

2010-11-01  kitone  <kitone@gna.org>

	* plugins/subtitleformats/microdvd/microdvd.cc:
	Fix bug #16898 : Feature request - movie fps detecting.

2010-11-01  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	Fix bug #16917 : scale option doesn't work correctly with frame-based subtitles.

2010-09-05  kitone  <kitone@gna.org>

	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	Define the default value of the framerate from the player.

2010-09-02  kitone  <kitone@gna.org>

	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	Add the capability to return the framerate of the video.

2010-09-01  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/errorchecking.h:
	* src/style.cc:
	* src/style.h:
	* src/subtitletime.cc:
	* src/subtitletime.h:
	* src/we/waveformrenderergl.cc:
	Code cleanup.

2010-08-24  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/errorcheckingplugin.cc:
	* plugins/actions/textcorrection/pattern.cc:
	* plugins/actions/textcorrection/pattern.h:
	* src/timeutility.cc:
	Code cleanup.

2010-08-24  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	Code cleanup.

2010-08-24  kitone  <kitone@gna.org>

	* src/document.cc:
	Catch glib exception and display error dialog (open, save).

2010-08-24  kitone  <kitone@gna.org>

	* src/subtitle.cc:
	Fix bug #16524 : Broken character count (column translation).

2010-07-30  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Fix bug #16314 : Unable to set subtitle times after importing plain text.

2010-07-11  kitone  <kitone@gna.org>

	* configure.in: