@@ -1,3 +1,8 @@
+2010-11-10  kitone  <kitone@gna.org>
+
+	* plugins/actions/adjusttime/adjusttime.cc:
+	Fix English errors patch by Pavel Dvořák.
+
 2010-11-05  kitone  <kitone@gna.org>
 
 	* src/subtitlemodel.cc:
